refactor ApiResponse and GlobalExceptionHandler in auth-service to enhance response handling; replace ResponseUtil with static factory methods for consistent API responses